--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "pdf-service",
   "version": "1.0.0",
   "private": true,
+  "engines": {
+    "node": "20.x"
+  },
   "dependencies": {
-    "@sparticuz/chromium": "^127.0.0",
-    "puppeteer-core": "^23.0.0"
+    "@sparticuz/chromium": "141.0.0",
+    "puppeteer-core": "24.23.1"
   }
 }
